// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`v-text > should convert v-text to textContent 1`] = `
"import { setText as _setText, renderEffect as _renderEffect, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  let _str
  _renderEffect(() => _str !== _ctx.str && _setText(n0, (_str = _ctx.str)))
  return n0
}"
`;

exports[`v-text > should raise error and ignore children when v-text is present 1`] = `
"import { setText as _setText, renderEffect as _renderEffect, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = t0()
  let _test
  _renderEffect(() => _test !== _ctx.test && _setText(n0, (_test = _ctx.test)))
  return n0
}"
`;

exports[`v-text > should raise error if has no expression 1`] = `
"import { template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = t0()
  return n0
}"
`;
